# git-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  commit-msg.py  commit-type-with-linear-ref-in-msg.sh  common.py  linear-issue-in-commit-msg.sh  linear-ref-in-msg.sh  prepare-commit-msg-with-linear-ref.py  prepare-commit-msg-with-linear-ref.sh  prepare-commit-msg.py  pyproject.toml  requirements.txt  test_common.py
.github/workflows/: deploy.yaml
git_hooks/: commit_msg.py  common.py  prepare_commit_msg.py  test_commit_msg.py  test_common.py  test_prepare_commit_msg.py
