[project]
name = "git-hooks"
version = "24.05.23-1"

[project.optional-dependencies]
dev = [
  "bumpver==2022.1119",
  "pytest==6.2.5",
]

[tool.bumpver]
current_version = "24.05.23-1"
version_pattern = "0Y.0M.0D[-INC0]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"',
    '^current_version = "{version}"',
]
"README.md" = [
    'rev: {version}',
]
"commit-msg.py" = [
    'two-inc/git-hooks/blob/{version}/README.md'
]
