[project]
name = "git-hooks"
version = "24.06.17"
dependencies = [
  "gql[aiohttp]==3.4.1",
]

[project.optional-dependencies]
dev = [
  "bumpver==2022.1119",
  "pytest==6.2.5",
]

[project.scripts]
prepare-commit-msg = "git_hooks.prepare_commit_msg:main"
commit-msg = "git_hooks.commit_msg:main"

[tool.bumpver]
current_version = "24.06.17"
version_pattern = "0Y.0M.0D[-INC0]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"',
    '^current_version = "{version}"',
]
"README.md" = [
    'rev: {version}',
]
"git_hooks/commit_msg.py" = [
    'two-inc/git-hooks/blob/{version}/README.md'
]
