[project]
name = "git-hooks"
version = "24.11.29"
dependencies = ["gql[requests]==3.4.1"]
requires-python = ">=3.10"

[tool.uv]
package = true


[dependency-groups]
test = [
  "bumpver==2022.1119",
  "pytest==6.2.5",
  "pytest-cov>=6.1.1",
  "pre-commit==3.7.1",
]

[project.scripts]
prepare-commit-msg = "git_hooks.prepare_commit_msg:main"
commit-msg = "git_hooks.commit_msg:main"

[tool.bumpver]
current_version = "24.11.29"
version_pattern = "0Y.0M.0D[-INC0]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['^version = "{version}"', '^current_version = "{version}"']
"README.md" = ['rev: {version}']
"git_hooks/commit_msg.py" = ['two-inc/git-hooks/blob/{version}/README.md']

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
skip_empty = false
# Always show the report by default
fail_under = 0

[tool.pytest.ini_options]
addopts = "--cov=git_hooks --cov-report=term"
